@@ -21,3 +21,5 @@
 - Layout: New "Eclipse Theme", written by Janni Kovacs
 - API: DockableDisplayer now tells whether a point lies inside its title or not. The drag n drop gets more flexibel this way
 - Bugfix: SecureScreenDockDialog throw NPE when closing
+- API: DockActionSource has now to implement Iterable<DockAction>
+- API: New DockActionSource "FilteredDockActionSource"
